// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DarkModeToggle Snapshots > renders in dark mode (default state) 1`] = `
<button
  aria-label="Switch to light mode"
  class="btn-secondary"
>
  Light Mode
</button>
`;

exports[`DarkModeToggle Snapshots > renders in light mode (after toggle) 1`] = `
<button
  aria-label="Switch to dark mode"
  class="btn-secondary"
>
  Dark Mode
</button>
`;
